# WikiGraphRag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml
backend/: Dockerfile  pyproject.toml
backend/src/app/: config.py  main.py
backend/src/app/db/: neo4j.py  schema.py
backend/src/app/llm/: json_utils.py  openai_client.py  prompts.py
backend/src/app/qa/: agent.py  answer.py  graph_tools.py  planner.py  retriever.py
backend/src/app/util/: ids.py  text.py
backend/src/app/wiki/: chunking.py  wikipedia.py
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: BuildLog.tsx  Chat.tsx  GraphView.tsx  NodeDrawer.tsx  NodeSidebar.tsx  ProgressBar.tsx
frontend/src/pages/: Build.tsx  Home.tsx
