[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wikigraphrag-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "neo4j>=5.18.0",
    "openai>=1.30.0",
    "requests>=2.31.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
